--- a/appDev/app6K/index.html
+++ b/appDev/app6K/index.html
@@ -54,6 +54,139 @@
 
 <main>
 
+    <div class="design-gl">
+        <section class="fullscreen">
+            <header class="fullscreen-top">
+                <dev-panel>top</dev-panel>
+            </header>
+            <section class="fullscreen-body">
+
+<div class="welcome-boxes-layout">
+    <div class="box welcome-links">
+        <div class="block">
+            <h1><a href="">Curacao Gaming Licence</a></h1>
+            <p>Licensing of all iGaming Products — online casinos, sports betting, poker, lotteries, and bingo!</p>
+        </div>
+        <div class="block">
+            <h2><a href="">Banking Solutions</a></h2>
+            <p>Open bank & processing accounts for your gambling business.</p>
+        </div>
+    </div>
+    <div class="box welcome-form">
+        <p>To apply for a <em>gaming licence</em>, open a <em>bank account</em> or ask a <em>question</em>, please, fill in the form:</p>
+
+        <form class="block form-design--plains" action="?it-was-form-submit">
+            <fieldset class="form-group">
+                <div class="form-item">
+                     <input tabindex="1" type="text" name="your-name" id="your-name" value="" placeholder="(required)" required />
+                     <label for="your-name">Name</label>
+                </div>
+                <div class="form-item">
+                     <input tabindex="2" type="email" name="your-email" id="your-email" value="" placeholder="(required)" required />
+                     <label for="your-email">Email</label>
+                </div>
+                <div class="form-item">
+                     <input tabindex="3" type="tel" name="your-phone" id="your-phone" value="" />
+                     <label for="your-phone">Phone</label>
+                </div>
+                <div class="form-item">
+                     <input tabindex="4" type="text" name="your-skype" id="your-skype" value="" />
+                     <label for="your-skype">Skype</label>
+                </div>
+                <div class="form-textarea">
+                     <textarea tabindex="5" name="your-message" id="your-message" rows="4"></textarea>
+                     <label for="your-message">Message/Question</label>
+                </div>
+            </fieldset>
+            <div class="form-submit">
+                 <button tabindex="6" type="submit" class="button">Send</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+            </section>
+            <footer class="fullscreen-bottom">
+                <a href="#learn-more-1">learn more</a>
+            </footer>
+        </section>
+        <div id="learn-more-1"></div>
+    </div>
+
+
+    <div class="design-template">
+        <section class="fullscreen">
+            <header class="fullscreen-top">
+                <dev-panel>top</dev-panel>
+            </header>
+            <section class="fullscreen-body">
+
+<!-- >component</!-->
+<div class="welcome-boxes-template">
+    <div class="box welcome-item">
+
+        <!-- >data</!-->
+        <div class="block">
+            <h1 class="title">Curacao Gaming Licence</h1>
+            <p>Licensing of all iGaming Products — online casinos, sports betting, poker, lotteries, and bingo!</p>
+        </div>
+        <div class="block">
+            <h2 class="title">Banking Solutions</h2>
+            <p>Open bank & processing accounts for your gambling business.</p>
+        </div>
+        <!-- >data</!-->
+
+    </div>
+    <div class="box welcome-form">
+
+        <!-- >data</!-->
+        <p>To apply for a gaming licence:</p>
+        <form class="block" action="?it-was-form-submit">
+            <div class="form-item">
+                 <input tabindex="1" type="text" name="your-name" id="your-name" value="" placeholder="(required)" required />
+                 <label for="your-name">Name</label>
+            </div>
+            <div class="form-item">
+                 <input tabindex="2" type="email" name="your-email" id="your-email" value="" placeholder="(required)" required />
+                 <label for="your-email">Email</label>
+            </div>
+            <div class="form-item">
+                 <input tabindex="3" type="tel" name="your-phone" id="your-phone" value="" />
+                 <label for="your-phone">Phone</label>
+            </div>
+            <div class="form-item">
+                 <input tabindex="4" type="text" name="your-skype" id="your-skype" value="" />
+                 <label for="your-skype">Skype</label>
+            </div>
+            <div class="form-item">
+                 <textarea tabindex="5" name="your-message" id="your-message" rows="4"></textarea>
+                 <label for="your-message">Message/Question</label>
+            </div>
+            <div class="form-item">
+                 <button tabindex="6" type="submit">Send</button>
+            </div>
+        </form>
+        <!-- >data</!-->
+
+    </div>
+    <div class="welcome-menu">
+
+        <!-- >data</!-->
+        <div>Bonuses</div>
+        <!-- >data</!-->
+
+    </div>
+</div>
+<!-- >end</!-->
+
+            </section>
+            <footer class="fullscreen-bottom">
+                <a href="#learn-more">learn more</a>
+            </footer>
+        </section>
+        <div id="learn-more"></div>
+    </div>
+
 <!-- >component</!-->
 <div class="fullscreen">
     <div class="fullscreen-top">
@@ -67,36 +200,6 @@
     </div>
 </div>
 <!-- >end</!-->
-
-    <div class="design-template">
-        <section class="fullscreen">
-            <header class="fullscreen-top">
-                <dev-panel>top</dev-panel>
-            </header>
-            <section class="fullscreen-body">
-
-<!-- >component</!-->
-<div class="welcome-boxes-template">
-    <div class="welcome-item">
-        <dev-box>body</dev-box>
-    </div>
-    <div class="welcome-form">
-        <dev-box>body</dev-box>
-    </div>
-    <div class="welcome-menu">
-        <dev-box>body</dev-box>
-    </div>
-</div>
-<!-- >end</!-->
-
-            </section>
-            <footer class="fullscreen-bottom">
-                <a href="#learn-more">learn more</a>
-            </footer>
-        </section>
-        <div id="learn-more"></div>
-    </div>
-
 
     <section class="chapter use-grid">
 
@@ -122,10 +225,9 @@
             <nav class="toolbar">
                 <div>help</div>
                 <div class="sidebar-closer">
-<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
-    <path d="M0 0h24v24H0z" fill="none"/>
-</svg>
+                    <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/>
+                    </svg>
                 </div>
             </nav>
             <h2 class="title">Sidebar</h2>
