--- a/appDev/app6K/index.html
+++ b/appDev/app6K/index.html
@@ -172,7 +172,9 @@
     <div class="welcome-menu">
 
         <!-- >data</!-->
-        <div>Bonuses</div>
+        <div class="non-block">
+            <button class="kliker Demonside-trigga">► Trigga</button>
+        </div>
         <!-- >data</!-->
 
     </div>
