--- a/appDev/app6K/index.html
+++ b/appDev/app6K/index.html
@@ -31,6 +31,9 @@
     <!-- ========================================= APP CUSTOM -->
 
     <script src="app/script/app-custom-addon.js"></script>
+    <link rel="stylesheet"
+    media="screen"
+    href="https://fonts.googleapis.com/css?family=Montserrat:500,500i,600,700,800&subset=cyrillic" />
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script>
         $(function(){
@@ -53,6 +56,313 @@
 
 
 <main>
+
+    <div class="design-sg">
+        <div class="break-grid">
+            <div class="logo-matrix is-compact">
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/betgames.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">NetEnt</b> is one of the top slot providers in the industry. Its games feature superb graphics, animations, sound effects and intros and are hard to compete with. Proud recipient of numerous awards, NetEnt is a pearl of every fortunate casino.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/luckystreak.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/pragmaticplay.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">WorldMatch</b> has a wide portfolio of games, which have unique themes, sound effects, high quality and mobile compatibility. In addition, dashboard is located in one place in every game, for the convenience of your players.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/authentic.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">Asia Live Tech</b> is the First Bitcoin iGaming Software Provider in Asia. It is the foremost provider of cost and effective online casino solution with 24/7 Customer support for an enjoyable service.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/betgames.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">NetEnt</b> is one of the top slot providers in the industry. Its games feature superb graphics, animations, sound effects and intros and are hard to compete with. Proud recipient of numerous awards, NetEnt is a pearl of every fortunate casino.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/luckystreak.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/pragmaticplay.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">WorldMatch</b> has a wide portfolio of games, which have unique themes, sound effects, high quality and mobile compatibility. In addition, dashboard is located in one place in every game, for the convenience of your players.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/authentic.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">Asia Live Tech</b> is the First Bitcoin iGaming Software Provider in Asia. It is the foremost provider of cost and effective online casino solution with 24/7 Customer support for an enjoyable service.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/betgames.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/luckystreak.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/pragmaticplay.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/authentic.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/betgames.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/luckystreak.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/pragmaticplay.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/authentic.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/betgames.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">NetEnt</b> is one of the top slot providers in the industry. Its games feature superb graphics, animations, sound effects and intros and are hard to compete with. Proud recipient of numerous awards, NetEnt is a pearl of every fortunate casino.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/luckystreak.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/pragmaticplay.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">WorldMatch</b> has a wide portfolio of games, which have unique themes, sound effects, high quality and mobile compatibility. In addition, dashboard is located in one place in every game, for the convenience of your players.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/authentic.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">Asia Live Tech</b> is the First Bitcoin iGaming Software Provider in Asia. It is the foremost provider of cost and effective online casino solution with 24/7 Customer support for an enjoyable service.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/betgames.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">NetEnt</b> is one of the top slot providers in the industry. Its games feature superb graphics, animations, sound effects and intros and are hard to compete with. Proud recipient of numerous awards, NetEnt is a pearl of every fortunate casino.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/luckystreak.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/pragmaticplay.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">WorldMatch</b> has a wide portfolio of games, which have unique themes, sound effects, high quality and mobile compatibility. In addition, dashboard is located in one place in every game, for the convenience of your players.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/authentic.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">Asia Live Tech</b> is the First Bitcoin iGaming Software Provider in Asia. It is the foremost provider of cost and effective online casino solution with 24/7 Customer support for an enjoyable service.
+                        </div>
+                    </div>
+                </figure>
+                <figure class="card">
+                    <div class="card-picture">
+                        <a href="#">
+                            <img src="https://www.softgamings.com/content/uploads/betgames.png">
+                        </a>
+                    </div>
+                    <div class="card-text">
+                        <div>
+                            <b class="link">1 X 2 Network</b> is the pioneer of virtual football and also offers bingo, scratch-cards, slots and other games. Found in famous casinos of the world, it is definitely great acquisition for yours.
+                        </div>
+                    </div>
+                </figure>
+            </div>
+        </div>
+    </div>
 
     <div class="design-gl">
         <section class="fullscreen">
