--- a/appDev/app6K/app-seed.html
+++ b/appDev/app6K/app-seed.html
@@ -10,13 +10,6 @@
     <title>ʕ⊙ᴥ⊙ʔ</title>
 
 
-    <!-- ========================================= APP PRIMARY -->
-
-
-    <script src="app/script/app-avant-garde.js"></script>
-    <link  href="app/style/app-avant-garde.css" rel="stylesheet" type="text/css">
-
-
     <!-- ========================================= APP MAIN -->
 
 
@@ -26,13 +19,15 @@
 
     <!-- ========================================= APP CUSTOM -->
 
-    <link  href="app/style/app-custom-addon.scss" rel="stylesheet" type="text/css">
-    <script src="app/script/app-custom-addon.js"></script>
+
+    <style>
+    </style>
+
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
 </head>
-<body class="">
+<body class="body-wrap">
 
 
 
