--- a/appDev/app6K/gl.html
+++ b/appDev/app6K/gl.html
@@ -41,9 +41,73 @@
 <body class="screen">
 
     <article class="story">
-        <header>
-            Вашему онлайн-казино нужна лицензия, но вы не знаете, с чего начать? Порядок действий таков: пишете письмо (на английском языке) владельцу мастер-лицензии Кюрасао или в Управление по азартным играм Мальты. Вам дадут список необходимых документов, которые следует собрать. Вам расскажут по уставный капитал, бизнес-план, налог на прибыль, засыплют цифрами, списками, юридическими тонкостями и требованиями. Заметьте, все на английском языке. Вы нанимаете переводчика, юрисконсульта и бухгалтера. Через несколько месяцев, если повезет и вы все сделаете правильно, вы становитесь обладателем долгожданной лицензии.
+        <header class="intro">
+            <p>Вашему онлайн-казино нужна <a href="/rus/what-is-a-gambling-licence/">лицензия</a>, но вы не знаете, с чего начать? Порядок действий таков: пишете письмо (на английском языке) владельцу мастер-лицензии Кюрасао или в Управление по азартным играм Мальты. Вам дадут список необходимых документов, которые следует собрать. Вам расскажут по уставный капитал, бизнес-план, налог на прибыль, засыплют цифрами, списками, юридическими тонкостями и требованиями. Заметьте, все на английском языке. Вы нанимаете переводчика, юрисконсульта и бухгалтера. Через несколько месяцев, если повезет и вы все сделаете правильно, вы становитесь обладателем долгожданной лицензии.</p>
         </header>
+        <section class="has-two-columns">
+            <section class="block">
+                <h2 class="title">Плюсы</h2>
+                <ul>
+                    <li>Экономите деньги, потому что все делаете сами</li>
+                </ul>
+            </section>
+            <section class="block">
+                <h2 class="title">Минусы</h2>
+                <ul>
+                    <li>Тратите много времени</li>
+                    <li>Большая вероятность совершить ошибку, собрать не все документы, что только продлит волокиту</li>
+                    <li>Интегрировать в казино не все или, наоборот, лишние платежные системы</li>
+                    <li>Вероятность нарушить закон, не блокируя казино в странах, где онлайн-гэмблинг запрещен</li>
+                    <li>Риск связаться с нечестным сублицензиатом и потерять деньги</li>
+                </ul>
+            </section>
+        </section>
+        <p>Перевешивает ли единственный плюс многочисленные недостатки? Для кого-то да. Но если вы цените время, хотите снять с себя связанные с лицензированием хлопоты и запустить готовое онлайн-казино в кратчайшие сроки, доверьте специалистам нашей компании все заботы по оформлению. Мы предлагаем полный цикл услуг, включая:</p>
+        <ul>
+            <li>выбор оптимальной юрисдикции вашего онлайн-казино (Кюрасао, Мальта);</li>
+            <li>сбор необходимой документации;</li>
+            <li>открытие счета в надежном банке;</li>
+            <li>регистрация оффшорной компании;</li>
+            <li>предоставление бесперебойного хостинга с высокой пропускной способностью;</li>
+            <li>помощь в сертификации ПО казино;</li>
+            <li>привязка платежных систем к онлайн-казино, включая криптовалюту;</li>
+            <li>консультации по вопросам лицензирования;</li>
+            <li>получение лицензии и передача её клиенту.</li>
+        </ul>
+        <h2 class="title">5 причин, почему вам нужно обратиться в GamingLicensing</h2>
+        <ol>
+            <li>Работая на рынке с 2015 года, мы внимательно отслеживаем требования игровых юрисдикций, чтобы всегда быть в курсе законодательных новшеств. Мы располагаем самой свежей, актуальной информацией в сфере гэмблинга.</li>
+            <li>Эксперты GamingLicensing знают все (или почти все) о лицензировании игорной деятельности в разных странах: в Австрии, Белоруссии, Болгарии, Великобритании и т. д. Если вы захотите выйти на gambling-рынок отдельных стран, мы все организуем грамотно, оперативно и профессионально.</li>
+            <li>Ваше онлайн-казино станет хитом, ведь мы подберем вам игровые решения лучших производителей: Microgaming, NetEnt, Betsoft и других лидеров.</li>
+            <li>Мы занимаемся открытием лицензий на онлайн-казино, бинго, покер и лотерею.</li>
+            <li>Эксперты GamingLicensing всегда скрупулезны в финансовых вопросах, поэтому вы получаете предельно точную смету ваших расходов до начала работы.</li>
+        </ol>
+        <h2 class="title">Какая лицензия лучше: Кюрасао или Мальты?</h2>
+        <p>У наших клиентов разные запросы, планы и возможности, а у gambling-юрисдикций разные особенности, поэтому однозначного ответа быть не может. Мы изучим ваши потребности и посоветуем оптимальную юрисдикцию для вашего бизнеса.</p>
+        <h2 class="title">Особенности игорных лицензий Кюрасао и Мальты</h2>
+        <section class="has-two-columns">
+            <section class="block">
+                <h2 class="title">Кюрасао</h2>
+                <ul>
+                    <li>Ежегодная финансовая отчетность</li>
+                    <li>Единый подоходный налог - всего 2% от прибыли</li>
+                    <li>Регистрация компании в специальной экономической зоне (E-Zone) и Торговой палате Кюрасао, при этом один директор (номинальный) должен быть резидентом.</li>
+                    <li>Срок регистрации лицензии: 2-3 недели</li>
+                </ul>
+            </section>
+            <section class="block">
+                <h2 class="title">Мальта</h2>
+                <ul>
+                    <li>Ежегодные и ежемесячные отчеты</li>
+                    <li>Фиксированный годовой лицензионный сбор - 25.000 евро; налог на прибыль - по гибкой ставке от 0,40 до 1,25%</li>
+                    <li>Регистрация юрлица на Мальте, при этом директорами и акционерами могут быть нерезиденты.</li>
+                    <li>Срок регистрации: временная лицензия (provisional license) выдается через 2-3 недели, постоянная (full license) - через полгода.</li>
+                </ul>
+            </section>
+        </section>
+        <footer>
+            <p>Доверяя нам оформление лицензии для онлайн-казино, вы гарантированно получаете полное консультативное сопровождение экспертов, грамотные рекомендации и, главное, законный бизнес, подкрепленный престижной лицензией Кюрасао или Мальты. Мы разбираемся в правовых нюансах, связанных с гэмблингом, поэтому ваше онлайн-казино будет 100% легальным, а значит привлекательным для игроков.</p>
+        </footer>
     </article>
 
 
