--- a/appDev/app6K/usecases-grid.html
+++ b/appDev/app6K/usecases-grid.html
@@ -19,6 +19,10 @@
 
     <!-- ========================================= APP CUSTOM -->
 
+    <!-- design font -->
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&subset=cyrillic" rel="stylesheet">
+
+    <!-- demo templates -->
     <style>
         .demo-curacao {
             padding-top:    2.4rem;
@@ -30,14 +34,32 @@
             max-width: 38em;
         }
     </style>
+    <style>
+        .demo-markup {
+            padding-top:    2.4rem;
+            padding-bottom: 2.4rem;
+            background-color: #D9CEB2;
+            color: #090206;
+        }
+        .demo-markup-illustration {
+            background-color:darkseagreen;
+            color: forestgreen;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            align-items: center;
+            min-height: 18rem;
+            font-size: 4rem;
+        }
+    </style>
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
 </head>
-<body class="screen">
+<body class="screen design-template">
 
     <article class="grid demo-curacao">
-        <header class="intro">
+        <header>
             <p>Вашему онлайн-казино нужна <a href="/rus/what-is-a-gambling-licence/">лицензия</a>, но вы не знаете, с чего начать? Порядок действий таков: пишете письмо (на английском языке) владельцу мастер-лицензии Кюрасао или в Управление по азартным играм Мальты. Вам дадут список необходимых документов, которые следует собрать. Вам расскажут по уставный капитал, бизнес-план, налог на прибыль, засыплют цифрами, списками, юридическими тонкостями и требованиями. Заметьте, все на английском языке. Вы нанимаете переводчика, юрисконсульта и бухгалтера. Через несколько месяцев, если повезет и вы все сделаете правильно, вы становитесь обладателем долгожданной лицензии.</p>
         </header>
         <section bg class="block box has-two-columns">
@@ -71,7 +93,7 @@
             <li>получение лицензии и передача её клиенту.</li>
         </ul>
         <hr>
-        <section class="left-wrap-in-grid box" bg>
+        <section class="right-wrap-in-grid box" bg>
             <h2 class="title">5 причин, почему вам нужно обратиться в GamingLicensing</h2>
             <ol class="block demo-curacao--reasons">
                 <li>Работая на рынке с 2015 года, мы внимательно отслеживаем требования игровых юрисдикций, чтобы всегда быть в курсе законодательных новшеств. Мы располагаем самой свежей, актуальной информацией в сфере гэмблинга.</li>
@@ -107,10 +129,59 @@
                 </section>
             </section>
         </section>
-        <hr>
-        <footer>
+        <footer class="text-accent">
             <p>Доверяя нам оформление лицензии для онлайн-казино, вы гарантированно получаете полное консультативное сопровождение экспертов, грамотные рекомендации и, главное, законный бизнес, подкрепленный престижной лицензией Кюрасао или Мальты. Мы разбираемся в правовых нюансах, связанных с гэмблингом, поэтому ваше онлайн-казино будет 100% легальным, а значит привлекательным для игроков.</p>
         </footer>
+    </article>
+
+    <article class="grid demo-markup">
+        <h1>Article layout, <span class="gwrtsch">gwrtsch</span></h1>
+        <p>
+            To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
+        </p>
+        <section bg class="block box text-accent">
+            <p>
+                Gardening & War section WSJ Ushahidi circulation explainer Article Skimmer privacy Free Darko layoffs Romenesko, writing learnings I love the Weather & Opera section linking the audience knows more than I do discuss mthomps WSJ, CNN leaves it there crowdsourcing Foursquare Jeff Jarvis prostate serendipity #twittermakesyoustupid mathewi API.
+            </p>
+        </section>
+        <h2>Pellentesque habitant</h2>
+        <p>
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+        </p>
+        <header>
+            <h2>Pellentesque habitant</h2>
+            <p class="subtitle">Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.</p>
+        </header>
+        <aside class="aside has-block">
+            <section class="block">
+                <p>Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.  Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+            </section>
+        </aside>
+        <p>
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.  Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+        </p>
+        <header>
+            <h3>Figure</h3>
+            <p class="subtitle">Get a better idea</p>
+        </header>
+        <p>
+            To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
+        </p>
+        <h2>Pellentesque habitant</h2>
+        <h3>Vestibulum tortor quam</h3>
+        <p>
+            Donec non enim in turpis pulvinar facilisis. Ut felis.  Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+        </p>
+        <h3>Figure</h3>
+        <p>
+            To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
+        </p>
+        <figure class="block">
+            <div class="illustration demo-markup-illustration">image</div>
+            <figcaption>
+                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
+            </figcaption>
+        </figure>
     </article>
 
 </body>
